tests/invalid/dictionary_literal_missing_entry.wio
fn Entry() -> i32 {
    let values = { "hp": 10, };
    return values.Length();
}
